--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "etdsolutions/requirejs",
+  "name": "etdsolutions/codemirror",
   "description": "Shim repository for CodeMirror",
   "homepage": "http://codemirror.net/",
   "license": "MIT",
